syntax = "proto3";

package blogging;
option go_package = "./blogging";

import "google/protobuf/wrappers.proto";

message UserInfo{
  string id = 1;
  string name = 2;
  string avatar = 3;
  int32 total_blog = 4;
}